--- a/src/poster/poster.tex
+++ b/src/poster/poster.tex
@@ -22,12 +22,14 @@
 \usepackage{url}
 \usepackage{hyperref}
 \usepackage{xcolor}
-\definecolor{ueacyan}{HTML}{019DDA}
-\hypersetup{colorlinks, breaklinks, linkcolor=ueacyan, urlcolor=ueacyan}
+\definecolor{pyblue}{HTML}{446785}
+\definecolor{pyyellow}{HTML}{D6AD43}
+\definecolor{darkblue}{HTML}{000080}
+\hypersetup{colorlinks, breaklinks, urlcolor=darkblue}
 
 %%% Fancy items
 \newcommand*{\pyitem}{\item [{\includegraphics[width=0.4cm]{python_logo.png}}]}
-
+\usepackage{verbatim}
 \begin{document}
 \pagestyle{empty} % No page numbers
 
@@ -45,40 +47,40 @@
 \pyitem The 3-day workshop will give a hands-on introduction to Python --- modern open-source programming language with a large community support.
 \pyitem It will focus on the analysis and visualisation of the data commonly used in environmental sciences.
 \pyitem \textbf{No previous Python experience is required!}
+\pyitem More info: \url{https://ueapy.github.io/enveast_python_course/}
 \end{itemize}
 
 
-\subsection*{When?}
+\subsection*{Schedule}
 \begin{center}
-\begin{tabular}{lll}
-21 Nov 2016 & Monday & 09:40--18:00 \\
-23 Nov 2016 & Wednesday & 10:40--18:00 \\
-25 Nov 2016 & Friday & 12:00--18:00 \\
+\begin{tabular}{llll}
+Mon & 21 Nov & 09:40--18:00 & Python basics and programming environment\\
+Wed & 23 Nov & 10:40--18:00 & Scientific libraries: numpy, scipy, pandas, matplotlib \\
+Fri & 25 Nov & 12:00--18:00 & Maps and environmental sciences data formats\\
 \end{tabular}
 \end{center}
 
 
-\subsection*{How much?}
+\subsection*{Costs}
 \begin{itemize}
-\pyitem EnvEast DTP students: \textbf{FREE}
+\pyitem EnvEast DTP students: \textbf{free}
 \pyitem Other participants: \pounds 60
 \end{itemize}
 \vspace{-0.5cm}
 \scriptsize The cost includes lunch on Monday and Wednesday, as well as coffee \& biscuits throughout. \normalsize
 
-\subsection*{What?}
+\subsection*{Register}
+
+
+\subsection*{Enquire}
+\small
 \begin{itemize}
-\pyitem Python basics and programming environment
-\pyitem Core scientific libraries: numpy, scipy, pandas
-\pyitem Simple visualisation in matplotlib
-\pyitem Plotting data on maps
-\pyitem Working with environmental sciences data formats 
+\pyitem Matt (m.bone@uea.ac.uk)
+\pyitem Denis (d.sergeev@uea.ac.uk)
 \end{itemize}
 
-
 %## Instructors:
-%* [Denis](mailto:d.sergeev@uea.ac.uk)
-%* [Matt](mailto:m.bone@uea.ac.uk)
+
 %* [Tiago](mailto:tiago.silva@cefas.co.uk)
 
 \begin{center}
