finish the poster

--- a/src/poster/poster.tex
+++ b/src/poster/poster.tex
@@ -69,19 +69,13 @@ Fri & 25 Nov & 12:00--18:00 & Maps and environmental sciences data formats\\
 \vspace{-0.5cm}
 \scriptsize The cost includes lunch on Monday and Wednesday, as well as coffee \& biscuits throughout. \normalsize
 
-\subsection*{Register}
-
-
-\subsection*{Enquire}
-\small
+\subsection*{Registration and enquiries}
+To register, please send an e-mail to:
 \begin{itemize}
+\pyitem Denis (d.sergeev@uea.ac.uk), or
 \pyitem Matt (m.bone@uea.ac.uk)
-\pyitem Denis (d.sergeev@uea.ac.uk)
 \end{itemize}
-
-%## Instructors:
-
-%* [Tiago](mailto:tiago.silva@cefas.co.uk)
+Places are limited to \textbf{20}, and priority will be given to EnvEast DTP students.
 
 \begin{center}
 \begin{minipage}{0.2\linewidth}
