--- a/src/poster/poster.tex
+++ b/src/poster/poster.tex
@@ -55,8 +55,8 @@
 \begin{center}
 \begin{tabular}{llll}
 Mon & 21 Nov & 09:40--18:00 & Python basics and programming environment\\
-Wed & 23 Nov & 10:40--18:00 & Scientific libraries: numpy, scipy, pandas, matplotlib \\
-Fri & 25 Nov & 12:00--18:00 & Maps and environmental sciences data formats\\
+Wed & 23 Nov & 10:40--18:00 & Scientific data manipulation and plotting \\
+Fri & 25 Nov & 12:00--18:00 & Mapping and applied environmental science exercise\\
 \end{tabular}
 \end{center}
 
